# pde-examples

./: README.md  pyproject.toml
examples/advection-diffusion-1d-spherical-fipy/: advection-diffusion-1d-spherical-fipy.ipynb  mesh.vtk  problem_def.py
